java并发编程相关代码示例

--- a/DemoCode/pom.xml
+++ b/DemoCode/pom.xml
@@ -19,6 +19,16 @@
             </plugin>
         </plugins>
     </build>
+    <properties>
+        <junit.version>4.12</junit.version>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
